--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <!-- NUMBER ADD  -->
+      <!-- <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="count" action="index.html" method="post">
             <h1>Counting app</h1>
@@ -25,7 +26,24 @@
             <button type="submit" name="button">submit</button>
           </form>
         </div>
+      </div> -->
+
+      <!-- WORD PUZZLE -->
+      <!-- <div class="row">
+        <div class="col-sm-6 col-md-offset-3 well">
+          <form id="quotePuzzle" action="index.html" method="post">
+            <h1>Please enter a quote: </h1>
+            <div class="form-group">
+              <label>Quote to puzzle: </label>
+              <input id="quoteToPuzzle" type="text" name="name" value="">
+            </div>
+            <button type="submit" name="button">submit</button>
+          </form>
+        </div>
       </div>
+      <div id="output">
+        <button id="showForm"type="button" name="button">New Puzzle</button>
+      </div> -->
     </div>
   </body>
 </html>
