--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
       <div id="output">
         <button id="showForm"type="button" name="button">New Puzzle</button>
       </div> -->
+
+      <!-- PALINDROME TESTER -->
+      <div class="row">
+        <div class="col-sm-6 col-md-offset-3 well">
+          <form id="palindromeTest" action="index.html" method="post">
+            <h1>Please enter a word to be tested: </h1>
+            <div class="form-group">
+              <label>Potential palindrome: </label>
+              <input id="potentialPalindrome" type="text" name="name" value="">
+            </div>
+            <button type="submit" name="button">submit</button>
+          </form>
+        </div>
+      </div>
+      <div id="output">
+        <button id="showForm"type="button" name="button">New Puzzle</button>
+      </div>
+
     </div>
   </body>
 </html>
