--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div> -->
 
       <!-- PALINDROME TESTER -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="palindromeTest" action="index.html" method="post">
             <h1>Please enter a word to be tested: </h1>
@@ -60,7 +60,42 @@
       </div>
       <div id="output">
         <button id="showForm"type="button" name="button">New Puzzle</button>
+      </div> -->
+
+      <!-- Prime Finder
+      <div class="row">
+        <div class="col-sm-6 col-md-offset-3 well">
+          <form id="primeFinder" action="index.html" method="post">
+            <h1>Please enter a word to be tested: </h1>
+            <div class="form-group">
+              <label>Tell me the prime numbers less than:</label>
+              <input id="primeInput" type="text" name="name" value="">
+            </div>
+            <button type="submit" name="button">submit</button>
+          </form>
+        </div>
       </div>
+      <div id="output">
+        <button id="showForm"type="button" name="button">New Puzzle</button>
+      </div> -->
+
+      <!-- Factorial -->
+      <div class="row">
+        <div class="col-sm-6 col-md-offset-3 well">
+          <form id="factor" action="index.html" method="post">
+            <h1>Please enter a word to be tested: </h1>
+            <div class="form-group">
+              <label>Tell me the prime numbers less than:</label>
+              <input id="factorInput" type="text" name="name" value="">
+            </div>
+            <button type="submit" name="button">submit</button>
+          </form>
+        </div>
+      </div>
+      <div id="output">
+        <button id="showForm"type="button" name="button">New Puzzle</button>
+      </div>
+
 
     </div>
   </body>
