--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <!-- NUMBER ADD  -->
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="count" action="index.html" method="post">
             <h1>Counting app</h1>
@@ -26,10 +26,10 @@
             <button type="submit" name="button">submit</button>
           </form>
         </div>
-      </div> -->
+      </div>
 
       <!-- WORD PUZZLE -->
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="quotePuzzle" action="index.html" method="post">
             <h1>Please enter a quote: </h1>
@@ -43,10 +43,10 @@
       </div>
       <div id="output">
         <button id="showForm"type="button" name="button">New Puzzle</button>
-      </div> -->
+      </div>
 
       <!-- PALINDROME TESTER -->
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="palindromeTest" action="index.html" method="post">
             <h1>Please enter a word to be tested: </h1>
@@ -59,41 +59,43 @@
         </div>
       </div>
       <div id="output">
-        <button id="showForm"type="button" name="button">New Puzzle</button>
-      </div> -->
+        
+      </div>
 
-      <!-- Prime Finder
+      <!-- Prime Finder -->
       <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="primeFinder" action="index.html" method="post">
-            <h1>Please enter a word to be tested: </h1>
+            <h1>Enter a number to find primes </h1>
             <div class="form-group">
-              <label>Tell me the prime numbers less than:</label>
+              <label>Enter number:</label>
               <input id="primeInput" type="text" name="name" value="">
             </div>
             <button type="submit" name="button">submit</button>
           </form>
         </div>
       </div>
-      <div id="output">
-        <button id="showForm"type="button" name="button">New Puzzle</button>
-      </div> -->
+      <div id="primeOutput">
+        <ul>
+
+        </ul>
+      </div>
 
       <!-- Factorial -->
       <div class="row">
         <div class="col-sm-6 col-md-offset-3 well">
           <form id="factor" action="index.html" method="post">
-            <h1>Please enter a word to be tested: </h1>
+            <h1>Factorial: </h1>
             <div class="form-group">
-              <label>Tell me the prime numbers less than:</label>
+              <label>Compute factorial:</label>
               <input id="factorInput" type="text" name="name" value="">
             </div>
             <button type="submit" name="button">submit</button>
           </form>
         </div>
       </div>
-      <div id="output">
-        <button id="showForm"type="button" name="button">New Puzzle</button>
+      <div id="factorialOutput">
+
       </div>
 
 
